# word2vec-rs

./: .gitignore  Cargo.toml  README.md  build.rs  vec_arith.c  vec_arith.h
.github/: dependabot.yml
.github/workflows/: codeql.yml  rust.yml
src/: dictionary.rs  ffi.rs  lib.rs  main.rs  matrix.rs  model.rs  test_ffi.py  train.rs  utils.rs  w2v.rs
