[package]
build="build.rs"
name = "word2vec"
version = "0.1.0"
authors = ["mklf <golifang1234@gmail.com>"]
[lib]
name = "word2vec"
path ="src/lib.rs"
[[bin]]
name = "word2vec"
path = "src/main.rs"
doc = false

[features]
default = []

[build-dependencies]
gcc = "0.3"

[dependencies]
rand = "0.4"
clap = "3.2.20"
time = "*"
libc= "*"
